// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserInfo Endpoint  Invoke UserInfo endpoint simple_user 1`] = `
Object {
  "sub": "simple_user",
}
`;

exports[`UserInfo Endpoint  Invoke UserInfo endpoint user_with_all_claim_types 1`] = `
Object {
  "email": "oliver.hunter@gmail.com",
  "name": "Oliver Hunter",
  "some-custom-identity-user-claim": "Oliver's Custom User Claim",
  "sub": "user_with_all_claim_types",
}
`;

exports[`UserInfo Endpoint  Invoke UserInfo endpoint user_with_custom_api_resource_claims 1`] = `
Object {
  "email": "sam.tailor@gmail.com",
  "name": "Sam Tailor",
  "sub": "user_with_custom_api_resource_claims",
}
`;

exports[`UserInfo Endpoint  Invoke UserInfo endpoint user_with_custom_identity_claims 1`] = `
Object {
  "email": "jack.sparrow@gmail.com",
  "name": "Jack Sparrow",
  "some-custom-identity-user-claim": "Jack's Custom User Claim",
  "sub": "user_with_custom_identity_claims",
}
`;

exports[`UserInfo Endpoint  Invoke UserInfo endpoint user_with_standard_claims 1`] = `
Object {
  "email": "john.smith@gmail.com",
  "email_verified": "true",
  "name": "John Smith",
  "sub": "user_with_standard_claims",
}
`;

exports[`UserInfo Endpoint  Retrieve user access token simple_user 1`] = `
{
  "alg": "RS256",
  "typ": "JWT",
  "iss": "http://localhost:8080",
  "aud": "some-app",
  "client_id": "implicit-flow-client-id",
  "sub": "simple_user",
  "idp": "local",
  "scope": [
    "openid",
    "profile",
    "email",
    "some-custom-identity",
    "some-app-scope-1"
  ],
  "amr": [
    "pwd"
  ]
}
`;

exports[`UserInfo Endpoint  Retrieve user access token user_with_all_claim_types 1`] = `
{
  "alg": "RS256",
  "typ": "JWT",
  "iss": "http://localhost:8080",
  "aud": "some-app",
  "client_id": "implicit-flow-client-id",
  "sub": "user_with_all_claim_types",
  "idp": "local",
  "some-app-user-custom-claim": "Oliver's Custom User Claim",
  "some-app-scope-1-custom-user-claim": "Oliver's Scope Custom User Claim",
  "scope": [
    "openid",
    "profile",
    "email",
    "some-custom-identity",
    "some-app-scope-1"
  ],
  "amr": [
    "pwd"
  ]
}
`;

exports[`UserInfo Endpoint  Retrieve user access token user_with_custom_api_resource_claims 1`] = `
{
  "alg": "RS256",
  "typ": "JWT",
  "iss": "http://localhost:8080",
  "aud": "some-app",
  "client_id": "implicit-flow-client-id",
  "sub": "user_with_custom_api_resource_claims",
  "idp": "local",
  "some-app-user-custom-claim": "Sam's Custom User Claim",
  "some-app-scope-1-custom-user-claim": "Sam's Scope Custom User Claim",
  "scope": [
    "openid",
    "profile",
    "email",
    "some-custom-identity",
    "some-app-scope-1"
  ],
  "amr": [
    "pwd"
  ]
}
`;

exports[`UserInfo Endpoint  Retrieve user access token user_with_custom_identity_claims 1`] = `
{
  "alg": "RS256",
  "typ": "JWT",
  "iss": "http://localhost:8080",
  "aud": "some-app",
  "client_id": "implicit-flow-client-id",
  "sub": "user_with_custom_identity_claims",
  "idp": "local",
  "scope": [
    "openid",
    "profile",
    "email",
    "some-custom-identity",
    "some-app-scope-1"
  ],
  "amr": [
    "pwd"
  ]
}
`;

exports[`UserInfo Endpoint  Retrieve user access token user_with_standard_claims 1`] = `
{
  "alg": "RS256",
  "typ": "JWT",
  "iss": "http://localhost:8080",
  "aud": "some-app",
  "client_id": "implicit-flow-client-id",
  "sub": "user_with_standard_claims",
  "idp": "local",
  "scope": [
    "openid",
    "profile",
    "email",
    "some-custom-identity",
    "some-app-scope-1"
  ],
  "amr": [
    "pwd"
  ]
}
`;
